--- a/main.css
+++ b/main.css
@@ -23,6 +23,9 @@ body {
 	margin: 20px auto;
 }
 #details2 {
+	font-size: 1.3em;
+}
+#details2, #details3 {
 	display: none;
 }
 
@@ -31,6 +34,10 @@ body {
 	height: 270px;
 	margin: 0 auto;
 	border: 10px solid lightgray;
+}
+
+.result {
+	display: none;
 }
 
 #chart, #axis, #axis-names {
@@ -59,11 +66,11 @@ body {
 	left: 180px;
 }
 .axis-name.x.left {
-	left: 0.7em;
+	left: 0.75em;
 	transform: translateX(-50%) rotate(-90deg);
 }
 .axis-name.x.right {
-	right: 0.7em;
+	right: 0.75em;
 	transform: translateX(50%) rotate(90deg);
 }
 .axis-name.y.top {
